--- a/puppet/environments/production/modules/sshuttle/files/ssh/config
+++ b/puppet/environments/production/modules/sshuttle/files/ssh/config
@@ -1,2 +1,8 @@
 Host cathy-alienware
     User Cathy
+    IPQoS ef
+    TCPKeepAlive no
+    ServerAliveInterval 5
+    ServerAliveCountMax 3
+    Ciphers aes256-gcm@openssh.com
+    MACs hmac-sha2-512,hmac-sha2-256,umac-128@openssh.com
