Move some ssh settings to system-wide config

--- a/puppet/environments/production/modules/cathyjf/files/ssh_config.d/100-cathy-alienware.conf
+++ b/puppet/environments/production/modules/cathyjf/files/ssh_config.d/100-cathy-alienware.conf
@@ -1,3 +1,7 @@
+# -*- ssh-config -*-
 Host cathy-alienware
+    TCPKeepAlive no
+    ServerAliveInterval 5
+    ServerAliveCountMax 3
     Ciphers aes256-ctr
     MACs hmac-sha2-512,hmac-sha2-256
