--- a/puppet/environments/production/modules/sshuttle/files/ssh/config
+++ b/puppet/environments/production/modules/sshuttle/files/ssh/config
@@ -1,6 +1,8 @@
+# -*- ssh-config -*-
+Include /etc/ssh/ssh_config.d/*.conf
+
 Host cathy-alienware
     User Cathy
+    # These packets will primarily be used to forward gamepad input, which we
+    # want to be as low-latency as possible.
     IPQoS ef
-    TCPKeepAlive no
-    ServerAliveInterval 5
-    ServerAliveCountMax 3
