Brewfile: Add `ruby`

--- a/misc/Brewfile
+++ b/misc/Brewfile
@@ -23,6 +23,7 @@ brew "poppler"
 brew "powershell/tap/powershell"
 brew "procmail"
 brew "recode"
+brew "ruby"
 cask "macfuse"
 cask "cathyjf/misc/keychain-interpose"
 cask "cathyjf/misc/sshfs"
