vscode: Add CMake extension settings

--- a/home/private_Library/private_Application Support/private_Code/private_User/private_settings.json
+++ b/home/private_Library/private_Application Support/private_Code/private_User/private_settings.json
@@ -15,5 +15,13 @@
             "statusBar.background": "#333333",
             "statusBarItem.remoteBackground": "#333333"
         },
-    }
+    },
+    "cmake.pinnedCommands": [
+        "cmake.configure",
+        "cmake.clean",
+        "cmake.build",
+    ],
+    "cmake.preferredGenerators": [
+        "Ninja"
+    ]
 }
