--- a/misc/Brewfile
+++ b/misc/Brewfile
@@ -1,31 +1,208 @@
+tap "buo/cask-upgrade" # https://github.com/buo/homebrew-cask-upgrade
 tap "cathyjf/misc" # https://github.com/cathyjf/homebrew-misc
+tap "gromgit/fuse"
+tap "homebrew/bundle"
+tap "homebrew/cask"
 tap "homebrew/core"
+tap "homebrew/services"
+tap "homebrew/test-bot"
+tap "jorgelbg/tap"
 tap "powershell/tap"
 tap "puppetlabs/puppet"
+brew "act"
+brew "afsctool"
 brew "aha"
+brew "ansifilter"
+brew "aria2"
+brew "atomicparsley"
+brew "autoconf"
+brew "automake"
+brew "autossh"
+brew "azure-cli"
 brew "bash"
+brew "bfg"
+brew "bison"
+brew "boost"
 brew "ca-certificates"
+brew "cabextract"
+brew "carthage"
 brew "cathyjf/misc/git-remote-gcrypt-keybase"
 brew "cathyjf/misc/oauth2-helper"
+brew "cathyjf/misc/urlencode"
+brew "cdrtools"
+brew "chezmoi"
+brew "cmake"
+brew "cmake-docs"
 brew "coreutils"
+brew "doxygen"
+brew "dpkg"
+brew "editorconfig-checker"
+brew "exiftool"
+brew "expect"
+brew "ffmpeg"
+brew "fig2dev"
 brew "fish"
+brew "gcc"
+brew "gdbm"
+brew "gh"
 brew "ghostscript"
 brew "git"
+brew "gnu-getopt"
+brew "gnu-tar"
 brew "gnupg"
+brew "gnutls"
+brew "gobject-introspection"
+brew "gpgme"
+brew "gradle"
+brew "graphviz"
+brew "grep"
+brew "gromgit/fuse/bindfs-mac"
+brew "htop"
+brew "imagemagick"
+brew "jorgelbg/tap/pinentry-touchid"
+brew "jq"
+brew "ldid"
+brew "libdaemon"
+brew "libffi"
+brew "libgcrypt"
+brew "libiconv"
+brew "libksba"
+brew "liblockfile"
+brew "libsoxr"
+brew "libtool"
+brew "libyaml"
 brew "llvm"
+brew "lz4"
+brew "macosvpn"
+brew "make"
+brew "markdown"
+brew "mas"
+brew "mingw-w64"
+brew "miniupnpc"
+brew "moc"
+brew "mosh"
 brew "msmtp"
 brew "nano"
+brew "netcat"
+brew "nmap"
 brew "node"
+brew "openjdk"
+brew "openssh"
+brew "openssl@3"
+brew "opus"
+brew "p11-kit"
+brew "paperkey"
+brew "parallel"
 brew "pass"
+brew "pcre"
 brew "perl"
+brew "pgpdump"
+brew "php"
 brew "pinentry"
+brew "pinentry-mac"
+brew "pipx"
+brew "pkg-config"
 brew "poppler"
 brew "powershell/tap/powershell"
 brew "procmail"
+brew "pstree"
+brew "pulseaudio"
+brew "python@3.11"
+brew "python@3.12"
+brew "python@3.13"
+brew "python@3.9"
+brew "qemu"
+brew "qrencode"
+brew "qt"
+brew "rbenv"
+brew "rclone"
+brew "readline"
 brew "recode"
+brew "rinetd"
+brew "rsync"
 brew "ruby"
-cask "macfuse"
+brew "ruby-install"
+brew "samba"
+brew "sdl2"
+brew "sevenzip"
+brew "shellcheck"
+brew "simple-scan"
+brew "sox"
+brew "speedtest-cli"
+brew "symlinks"
+brew "synergy-core", restart_service: true
+brew "telnet"
+brew "texinfo"
+brew "vcpkg"
+brew "wget"
+brew "wimlib"
+brew "winetricks"
+brew "wireguard-tools"
+brew "xz"
+brew "yj"
+brew "yq"
+brew "yt-dlp"
+brew "zbar"
+brew "zstd"
+cask "android-commandlinetools"
+cask "android-studio"
+cask "betterdisplay"
 cask "cathyjf/misc/keychain-interpose"
 cask "cathyjf/misc/sshfs"
+cask "chiaki"
+cask "codeql"
+cask "crossover"
+cask "docker"
+cask "dotnet-sdk"
+cask "firefox"
+cask "gimp"
+cask "git-credential-manager"
+cask "gog-galaxy"
+cask "google-cloud-sdk"
+cask "keybase"
+cask "launchcontrol"
+cask "lyx"
+cask "macfuse"
+cask "macs-fan-control"
+cask "microsoft-azure-storage-explorer"
+cask "moonlight"
+cask "oracle-jdk"
 cask "puppetlabs/puppet/puppet-agent-8"
+cask "reflector"
+cask "signal"
+cask "soundsource"
+cask "steam"
+cask "switchresx"
+cask "temurin"
+cask "thunderbird"
+cask "unpkg"
+cask "utm"
 cask "virtualhereserver"
+cask "visual-studio-code"
+cask "vitalsource-bookshelf"
+cask "vlc"
+cask "vmware-fusion"
+mas "AdGuard for Safari", id: 1440147259
+mas "Apple Configurator", id: 1037126344
+mas "Dark Reader for Safari", id: 1438243180
+mas "Developer", id: 640199958
+mas "Discovery", id: 1381004916
+mas "Keka", id: 470158793
+mas "Kindle", id: 302584613
+mas "Microsoft Excel", id: 462058435
+mas "Microsoft OneNote", id: 784801555
+mas "Microsoft PowerPoint", id: 462062816
+mas "Microsoft Word", id: 462054704
+mas "VBAN Receptor", id: 1462414931
+vscode "editorconfig.editorconfig"
+vscode "github.remotehub"
+vscode "ms-vscode.azure-repos"
+vscode "ms-vscode.cmake-tools"
+vscode "ms-vscode.cpptools"
+vscode "ms-vscode.cpptools-extension-pack"
+vscode "ms-vscode.cpptools-themes"
+vscode "ms-vscode.makefile-tools"
+vscode "ms-vscode.remote-repositories"
+vscode "puppet.puppet-vscode"
+vscode "tamasfe.even-better-toml"
+vscode "twxs.cmake"
