sshuttle: Forward traffic to HomeKit devices

--- a/puppet/environments/production/modules/sshuttle/files/sshuttle.conf
+++ b/puppet/environments/production/modules/sshuttle/files/sshuttle.conf
@@ -1,6 +1,9 @@
 -r
 cathy-alienware
+# VirtualHere USB
 cathy-alienware:7573
+# HomeKit devices
+172.16.42.0/24
 --remote-shell
 powershell
 --python
