vscode: Configure puppet extension

--- a/home/private_Library/private_Application Support/private_Code/private_User/private_settings.json
+++ b/home/private_Library/private_Application Support/private_Code/private_User/private_settings.json
@@ -9,6 +9,9 @@
     "files.associations": {
         "*.pp": "puppetfile"
     },
+    "[puppet]": {
+        "files.insertFinalNewline": false
+    },
     "workbench.editor.empty.hint": "hidden",
     "workbench.colorCustomizations": {
         "[Default Dark Modern]": {
