Update sshuttle to 1.3.1

--- a/puppet/environments/production/modules/sshuttle/files/sshuttle.conf
+++ b/puppet/environments/production/modules/sshuttle/files/sshuttle.conf
@@ -1,7 +1,9 @@
 -r
 cathy-alienware
-# VirtualHere USB
+# VirtualHere USB Client
 cathy-alienware:7573
+# VirtualHere USB Server
+cathy-alienware:7778
 # HomeKit devices
 172.16.42.0/24
 --remote-shell
