--- a/puppet/environments/production/modules/scrypted/files/cathy.scrypted.server.plist
+++ b/puppet/environments/production/modules/scrypted/files/cathy.scrypted.server.plist
@@ -25,7 +25,7 @@
 	<array>
 		<string>/usr/bin/sandbox-exec</string>
 		<string>-f</string>
-		<string>/var/scrypted/.scrypted/profile.sb</string>
+		<string>/var/scrypted/profile.sb</string>
 		<string>/opt/homebrew/bin/npx</string>
 		<string>scrypted</string>
 		<string>serve</string>
